# loxplusplus

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  compile-and-run.sh  fib.lox
misc/executable/: create-executable.sh  main.c
src/: Ast.cpp  Ast.h  CodeGenerator.cpp  CodeGenerator.h  CompilationError.cpp  CompilationError.h  Error.cpp  Error.hpp  Literal.cpp  Literal.h  Parser.cpp  Parser.h  Platform.cpp  Platform.hpp  Scanner.cpp  Scanner.h  Scanner.hpp  Token.cpp  Token.h  Token.hpp  TokenType.cpp  TokenType.h  TokenType.hpp  Value.cpp  Value.h  dev.cpp  main.cpp
test/: literal-int.ast
